spices/ecs/tests/errors/sized-zip-cross-shape-reject.tur
;; E2c slice 2 negative regression -- mismatched `n` across storage
;; shapes is rejected statically by the SZ8 cross-parameter unifier.
;;
;; (SizedDense (Static 64)) zipped against (SizedSparse (Static 32))
;; fails to type-check: TUR-E0260 with "shares size variable 'n'".
;;
;; Compile with -Xsized-types.

(defmodule sized_zip_cross_shape_reject_test
  (export)

(import ecs/sized-storage :refer [SizedDense sized-dense-new])
(import ecs/sized-sparse  :refer [SizedSparse sized-sparse-new])
(import ecs/sized-tag     :refer [SizedTag sized-tag-new])
(import ecs/sized-zip     :refer [sized-zip-all-three])

(defn mk-dense-64 [] : (SizedDense (Static 64) int)
  (:: (sized-dense-new 64) :SizedDense))

(defn mk-sparse-32 [] : (SizedSparse (Static 32) int)
  (:: (sized-sparse-new) :SizedSparse))

(defn mk-tag-64 [] : (SizedTag (Static 64))
  (:: (sized-tag-new 64) :SizedTag))

(defn main [] : int
  ;; ERROR: TUR-E0260 -- the sparse storage carries (Static 32) while
  ;; the dense + tag carry (Static 64). All three share `n` in
  ;; sized-zip-all-three's signature; unification fails on the sparse
  ;; argument.
  (sized-zip-all-three (mk-dense-64) (mk-sparse-32) (mk-tag-64))
  0)

) ;; end defmodule sized_zip_cross_shape_reject_test
